test/TestPhases/typechecker/invalid/ReturnMismatch2.blc
module

function calc() returns int64
    if true then
        return true
    else
        return -1
    end
end

activity main ()()
    let x = calc()
    await false
end
